--- a/pages/staff.html
+++ b/pages/staff.html
@@ -540,11 +540,78 @@
                 </div>
                 <div class="mb-2">
                     <label class="block text-sm font-semibold text-gray-500 uppercase mb-2">Order Status</label>
-                    <div id="detail-order-status-badge" class="inline-block px-3 py-1 rounded-full text-sm font-medium"></div>
+                    <div id="detail-order-status-badge" class="inline-block px-3 py-1 rounded-full text-sm font-medium">
+                    </div>
                 </div>
             </div>
             <div class="p-6 border-t border-gray-200 flex justify-end gap-3">
                 <button onclick="closeOrderModal()" class="btn-secondary text-sm">Close</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Stock Request Modal -->
+    <div id="stock-request-modal"
+        class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden items-center justify-center p-4">
+        <div class="bg-white rounded-xl w-full max-w-2xl max-h-[90vh] flex flex-col">
+            <div class="p-6 border-b border-gray-200 flex justify-between items-center">
+                <h3 class="text-xl font-bold">New Stock Request</h3>
+                <button onclick="closeRequestModal()" class="text-gray-500 hover:text-gray-700">
+                    <i class="fa fa-times text-xl"></i>
+                </button>
+            </div>
+            <div class="p-6 overflow-y-auto flex-1">
+                <form id="stock-request-form">
+                    <div class="mb-4">
+                        <label class="block text-sm font-medium text-gray-700 mb-2">Requested Items</label>
+                        <table class="min-w-full border rounded-lg overflow-hidden">
+                            <thead class="bg-gray-50">
+                                <tr>
+                                    <th class="px-2 py-2 text-left text-xs font-medium text-gray-500 uppercase">Book
+                                        Title</th>
+                                    <th class="px-2 py-2 text-left text-xs font-medium text-gray-500 uppercase w-32">
+                                        ISBN</th>
+                                    <th class="px-2 py-2 text-left text-xs font-medium text-gray-500 uppercase w-24">SKU
+                                    </th>
+                                    <th class="px-2 py-2 text-center text-xs font-medium text-gray-500 uppercase w-20">
+                                        Qty</th>
+                                    <th class="px-2 py-2 text-center text-xs font-medium text-gray-500 uppercase w-10">
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody id="request-items-body" class="divide-y divide-gray-200">
+                                <!-- 动态行模板 -->
+                                <tr>
+                                    <td class="p-1"><input type="text" class="form-input text-xs item-title"
+                                            placeholder="Title" required></td>
+                                    <td class="p-1"><input type="text" class="form-input text-xs item-isbn"
+                                            placeholder="ISBN"></td>
+                                    <td class="p-1"><input type="text" class="form-input text-xs item-sku"
+                                            placeholder="SKU"></td>
+                                    <td class="p-1"><input type="number" class="form-input text-xs text-center item-qty"
+                                            min="1" value="10" required></td>
+                                    <td class="p-1 text-center">
+                                        <button type="button" class="text-red-500 hover:text-red-700"
+                                            onclick="this.closest('tr').remove()"><i class="fa fa-trash"></i></button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <button type="button" onclick="addRequestRow()"
+                            class="mt-3 text-sm text-primary font-medium hover:underline">
+                            <i class="fa fa-plus-circle mr-1"></i> Add Another Item
+                        </button>
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-sm font-medium text-gray-700 mb-1">Notes / Reason</label>
+                        <textarea id="request-notes" class="form-input" rows="3"
+                            placeholder="e.g. Preparing for summer book fair..."></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="p-6 border-t border-gray-200 flex justify-end gap-3">
+                <button onclick="closeRequestModal()" class="btn-secondary">Cancel</button>
+                <button id="submit-request-btn" class="btn-primary">Submit to Headquarters</button>
             </div>
         </div>
     </div>
