--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,22 @@
     <script src="../scripts/tailwind.js"></script>
     <script src="../scripts/layout.js"></script>
     <link rel="stylesheet" href="../styles/global.css">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script>
+        (function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const role = urlParams.get('role');
+            const stage = urlParams.get('stage');
+
+            if (role === 'customer' && stage === '2') {
+                console.log("[Init] Detected Customer Stage 2 login. Auto-selecting UI...");
+                // 1. 自动隐藏角色选择面板 (如有)
+                // document.getElementById('role-selection').classList.add('hidden');
+                // 2. 自动切换到用户登录表单
+                // showLoginForm('customer');
+            }
+        })();
+    </script>
 </head>
 
 <body class="bg-brown-cream min-h-screen flex items-center justify-center p-6">
@@ -54,7 +70,7 @@
 
                 <div class="text-center mb-8">
                     <h1 id="auth-title" class="text-3xl font-serif font-bold text-brown-dark">Welcome Back</h1>
-                    <p id="auth-subtitle" class="text-gray-500 mt-2">Please enter your details</p>
+                    <p id="auth-subtitle" class="text-gray-500 mt-2">Log in using your staff account</p>
                 </div>
 
                 <!-- 原有的 login-form 移入此处 -->
@@ -67,25 +83,25 @@
                     </div>
                     <div>
                         <label class="block text-sm font-bold text-brown-dark mb-1">Password</label>
-                        <input type="password" id="password" required
-                            class="w-full px-4 py-3 rounded-lg border border-brown-light focus:ring-2 focus:ring-brown focus:outline-none transition-all"
-                            placeholder="••••••••">
+                        <div class="relative">
+                            <!-- 1. 去掉了 placeholder 里的黑点 -->
+                            <!-- 2. 增加了 pr-10 给右侧图标留位置 -->
+                            <input type="password" id="password" required
+                                class="w-full px-4 py-3 rounded-lg border border-brown-light focus:ring-2 focus:ring-brown focus:outline-none transition-all pr-10"
+                                placeholder="Enter your password">
+
+                            <!-- 3. 新增小眼睛按钮 -->
+                            <button type="button" id="toggle-password"
+                                class="absolute inset-y-0 right-0 px-3 flex items-center text-gray-400 hover:text-brown transition-colors focus:outline-none">
+                                <i class="fa fa-eye-slash text-lg"></i>
+                            </button>
+                        </div>
                     </div>
                     <div id="confirm-password-wrapper" class="hidden">
                         <label class="block text-sm font-bold text-brown-dark mb-1">Confirm Password</label>
                         <input type="password" id="confirm-password"
                             class="w-full px-4 py-3 rounded-lg border border-brown-light focus:ring-2 focus:ring-brown focus:outline-none transition-all"
                             placeholder="••••••••">
-                    </div>
-                    <div>
-                        <label class="block text-sm font-bold text-brown-dark mb-1">Login Role</label>
-                        <select id="role"
-                            class="w-full px-4 py-3 rounded-lg border border-brown-light focus:ring-2 focus:ring-brown focus:outline-none transition-all bg-white">
-                            <option value="customer">Customer</option>
-                            <option value="staff">Sales Staff</option>
-                            <option value="manager">Store Manager</option>
-                            <option value="finance">Finance Staff</option>
-                        </select>
                     </div>
                     <button type="submit" id="login-submit-btn"
                         class="w-full bg-brown text-white py-3 rounded-lg font-bold hover:bg-brown-dark transition-all shadow-md active:scale-[0.98] flex justify-center items-center">
